--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import "./reset.scss";
-@import "./media-queries.scss";
-@import "./typography.scss";
-@import "./_colors.scss";
+@import './reset';
+@import './media-queries';
+@import './typography';
+@import './colors';
