--- a/src/components/Typography/scss/colors.scss
+++ b/src/components/Typography/scss/colors.scss
@@ -1,5 +1,5 @@
-@import "@scss/main.scss";
+@import '@scss/main';
 
-.typography[data-color="light"] {
+.typography[data-color='light'] {
     color: $text-light;
 }
